tests/codegen/fail/interface/struct/derive_missing_impl_attr.stderr
error[E0080]: evaluation of constant value failed
 --> fail/interface/struct/derive_missing_impl_attr.rs:8:10
  |
8 | #[derive(GraphQLInterface)]
  |          ^^^^^^^^^^^^^^^^ evaluation panicked: Failed to implement interface `Character` on `ObjA`: missing interface reference in implementer's `impl` attribute.
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the derive macro `GraphQLInterface` (in Nightly builds, run with -Z macro-backtrace for more info)
